<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="empty_string" />
    <string name="error_message">Invalid input</string>
    <string name="concatenated_operator_text">%1$s%2$s</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">–</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="times">×</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="divides">÷</string>
    <string name="backspace">⌫</string>
    <string name="all_clear">AC</string>
</resources>